// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Searchbar renders correctly with large size 1`] = `
.c3 {
  border-radius: 8px;
  font-size: 18px;
  border: none;
}

.c3:hover {
  cursor: pointer;
}

.c3:focus {
  outline: none;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c6 {
  margin: 0;
  font-family: 'Airbnb-Cereal';
}

.c9 {
  background-color: rgb(215,4,102);
  border: none;
  padding: 15px 22px;
  color: white;
  border-radius: 8px;
  -webkit-transition: 0.8s;
  transition: 0.8s;
}

.c9:hover {
  background-color: #ff385c;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c13 {
  position: relative;
  margin-right: 8px;
}

.c13 svg {
  width: 14px;
  height: 14px;
  stroke: white;
}

.c13 svg path {
  fill: white;
  stroke-width: 2;
}

.c14 {
  font-weight: 300;
  font-size: 16px;
}

.c0 {
  width: 100%;
  height: 70px;
  border-radius: 15px;
  border: 1px solid;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #ffffff;
  box-shadow: rgb(0,0,0,0.15) 0px 5px 12px;
}

.c2 {
  background-color: #ffffff;
  height: 100%;
  width: 100%;
  border-radius: 15px;
}

.c2.first {
  -webkit-flex: 1.5 0 0%;
  -ms-flex: 1.5 0 0%;
  flex: 1.5 0 0%;
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
}

.c2.first:hover ~ div:nth-child(5) {
  width: 1px;
  height: 28px;
  background-color: transparent;
}

.c2.second {
  -webkit-flex: 0.8 0 0%;
  -ms-flex: 0.8 0 0%;
  flex: 0.8 0 0%;
  -webkit-order: 3;
  -ms-flex-order: 3;
  order: 3;
}

.c2.second:hover ~ div:nth-child(5) {
  width: 1px;
  height: 28px;
  background-color: transparent;
}

.c2.second:hover ~ div:nth-child(6) {
  width: 1px;
  height: 28px;
  background-color: transparent;
}

.c2.third {
  -webkit-flex: 0.8 0 0%;
  -ms-flex: 0.8 0 0%;
  flex: 0.8 0 0%;
  -webkit-order: 5;
  -ms-flex-order: 5;
  order: 5;
}

.c2.third:hover ~ div:nth-child(6) {
  width: 1px;
  height: 28px;
  background-color: transparent;
}

.c2.third:hover ~ div:nth-child(7) {
  width: 1px;
  height: 28px;
  background-color: transparent;
}

.c4 {
  width: inherit;
  height: inherit;
  border-radius: inherit;
  background-color: #ffffff;
  text-align: left;
  padding: 0 20px;
  border-top: 1px solid transparent;
  border-right: 2px solid transparent;
  border-bottom: 1px solid transparent;
  border-left: 2px solid transparent;
}

.c4.first {
  border-top: 1px solid transparent;
  border-right: 2px solid transparent;
  border-bottom: 1px solid transparent;
  border-left: 1px solid transparent;
}

.c4.first:hover {
  border-top: 1px solid;
  border-right: 2px solid;
  border-bottom: 1px solid;
  border-left: 1px solid;
}

.c4.last {
  border-top: 1px solid transparent;
  border-right: 1px solid transparent;
  border-bottom: 1px solid transparent;
  border-left: 2px solid transparent;
}

.c4.last:hover {
  border-top: 1px solid;
  border-right: 1px solid;
  border-bottom: 1px solid;
  border-left: 2px solid;
}

.c4:hover {
  border-top: 1px solid;
  border-right: 2px solid;
  border-bottom: 1px solid;
  border-left: 2px solid;
}

.c8 {
  background-color: inherit;
  border-radius: 15px;
  height: 100%;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-flex: 1.15 0 0%;
  -ms-flex: 1.15 0 0%;
  flex: 1.15 0 0%;
  -webkit-order: 7;
  -ms-flex-order: 7;
  order: 7;
}

.c8:hover ~ div:nth-child(7) {
  width: 1px;
  height: 28px;
  background-color: transparent;
}

.c15 {
  width: 1px;
  height: 100%;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c15.first {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

.c15.second {
  -webkit-order: 4;
  -ms-flex-order: 4;
  order: 4;
}

.c15.third {
  -webkit-order: 6;
  -ms-flex-order: 6;
  order: 6;
}

.c10 {
  position: absolute;
  right: 0px;
  z-index: 5px;
  margin-right: 12px;
}

.c5 p {
  font-weight: 700;
  -webkit-letter-spacing: 0.5px;
  -moz-letter-spacing: 0.5px;
  -ms-letter-spacing: 0.5px;
  letter-spacing: 0.5px;
  font-size: 10px;
  text-transform: uppercase;
}

.c7 {
  margin-top: 8px;
}

.c7 p {
  font-size: 14px;
  font-weight: 300;
}

.c1 {
  background-color: white;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 0%;
  -ms-flex: 1 1 0%;
  flex: 1 1 0%;
  height: 100%;
  border-radius: inherit;
}

<div
  style={Object {}}
>
  <div
    className="c0"
    style={Object {}}
  >
    <div
      className="c1"
      style={Object {}}
    >
      <div
        className="c2 first"
        style={Object {}}
      >
        <button
          className="c3 c4 first"
          onClick={[Function]}
          style={Object {}}
        >
          <div
            className="c5"
            style={Object {}}
          >
            <p
              className="c6"
              style={Object {}}
            >
              Location
            </p>
          </div>
          <div
            className="c7"
            style={Object {}}
          >
            <p
              className="c6"
              style={Object {}}
            >
              Where are you going?
            </p>
          </div>
        </button>
      </div>
      <div
        className="c2 second"
        style={Object {}}
      >
        <button
          className="c3 c4"
          onClick={[Function]}
          style={Object {}}
        >
          <div
            className="c5"
            style={Object {}}
          >
            <p
              className="c6"
              style={Object {}}
            >
              Check in
            </p>
          </div>
          <div
            className="c7"
            style={Object {}}
          >
            <p
              className="c6"
              style={Object {}}
            >
              Add dates
            </p>
          </div>
        </button>
      </div>
      <div
        className="c2 third"
        style={Object {}}
      >
        <button
          className="c3 c4"
          onClick={[Function]}
          style={Object {}}
        >
          <div
            className="c5"
            style={Object {}}
          >
            <p
              className="c6"
              style={Object {}}
            >
              Check out
            </p>
          </div>
          <div
            className="c7"
            style={Object {}}
          >
            <p
              className="c6"
              style={Object {}}
            >
              Add dates
            </p>
          </div>
        </button>
      </div>
      <div
        className="c8"
        style={Object {}}
      >
        <button
          className="c3 c4 last"
          onClick={[Function]}
          style={Object {}}
        >
          <div
            className="c5"
            style={Object {}}
          >
            <p
              className="c6"
              style={Object {}}
            >
              Guests
            </p>
          </div>
          <div
            className="c7"
            style={Object {}}
          >
            <p
              className="c6"
              style={Object {}}
            >
              Add guests
            </p>
          </div>
        </button>
        <button
          className="c3 c9 c10"
          onClick={[Function]}
          style={Object {}}
        >
          <div
            className="c11"
            style={Object {}}
          >
            <div
              className="c12 c13"
              style={Object {}}
            >
              <svg
                viewBox="0 0 56.966 56.966"
              >
                <path
                  d="M55.146,51.887L41.588,37.786c3.486-4.144,5.396-9.358,5.396-14.786c0-12.682-10.318-23-23-23s-23,10.318-23,23 s10.318,23,23,23c4.761,0,9.298-1.436,13.177-4.162l13.661,14.208c0.571,0.593,1.339,0.92,2.162,0.92 c0.779,0,1.518-0.297,2.079-0.837C56.255,54.982,56.293,53.08,55.146,51.887z M23.984,6c9.374,0,17,7.626,17,17s-7.626,17-17,17 s-17-7.626-17-17S14.61,6,23.984,6z"
                />
              </svg>
            </div>
            <p
              className="c6 c14"
              style={Object {}}
            >
              Search
            </p>
          </div>
        </button>
      </div>
      <div
        className="c15 first"
        style={Object {}}
      />
      <div
        className="c15 second"
        style={Object {}}
      />
      <div
        className="c15 third"
        style={Object {}}
      />
    </div>
  </div>
</div>
`;

exports[`Searchbar renders correctly with medium size 1`] = `
.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c2 {
  margin: 0;
  font-family: 'Airbnb-Cereal';
}

.c0 {
  background-color: transparent;
  border: 1px solid;
  height: 50px;
  width: 260px;
  padding: 0 7px 0 18px;
  border-radius: 24px;
}

.c3 {
  font-size: 14px;
}

.c4 {
  width: 32px;
  height: 32px;
  background: -webkit-linear-gradient( right, rgb(230,30,77) 0%, rgb(227,28,95) 50%, rgb(215,4,102) 100% );
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 50%;
}

.c6 {
  position: relative;
}

.c6 svg {
  width: 12px;
  height: 12px;
  stroke: #ffffff;
}

.c6 svg path {
  fill: #ffffff;
  stroke-width: 2;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div
  className="c0"
  onPress={[Function]}
  style={Object {}}
>
  <div
    className="c1"
    style={Object {}}
  >
    <p
      className="c2 c3"
      style={Object {}}
    >
      Start your search
    </p>
    <div
      className="c4"
      style={Object {}}
    >
      <div
        className="c5 c6"
        style={Object {}}
      >
        <svg
          viewBox="0 0 56.966 56.966"
        >
          <path
            d="M55.146,51.887L41.588,37.786c3.486-4.144,5.396-9.358,5.396-14.786c0-12.682-10.318-23-23-23s-23,10.318-23,23 s10.318,23,23,23c4.761,0,9.298-1.436,13.177-4.162l13.661,14.208c0.571,0.593,1.339,0.92,2.162,0.92 c0.779,0,1.518-0.297,2.079-0.837C56.255,54.982,56.293,53.08,55.146,51.887z M23.984,6c9.374,0,17,7.626,17,17s-7.626,17-17,17 s-17-7.626-17-17S14.61,6,23.984,6z"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Searchbar renders correctly with small size 1`] = `
.c0 {
  border-radius: 8px;
  font-size: 18px;
  border: none;
}

.c0:hover {
  cursor: pointer;
}

.c0:focus {
  outline: none;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c5 {
  margin: 0;
  font-family: 'Airbnb-Cereal';
}

.c1 {
  background-color: transparent;
  box-shadow: rgb(0,0,0,0.15) 0px 5px 12px;
  height: 50px;
  width: 100%;
  padding: 0 10px 0 18px;
  border-radius: 24px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  position: relative;
  top: 2px;
  margin-right: 16px;
}

.c4 svg {
  width: 16px;
  height: 16px;
}

.c4 svg path {
  stroke-width: 2;
}

.c6 {
  font-size: 16px;
  font-weight: 500;
}

<button
  className="c0 c1"
  onClick={[Function]}
  style={Object {}}
>
  <div
    className="c2"
    style={Object {}}
  >
    <div
      className="c3 c4"
      style={Object {}}
    >
      <svg
        viewBox="0 0 56.966 56.966"
      >
        <path
          d="M55.146,51.887L41.588,37.786c3.486-4.144,5.396-9.358,5.396-14.786c0-12.682-10.318-23-23-23s-23,10.318-23,23 s10.318,23,23,23c4.761,0,9.298-1.436,13.177-4.162l13.661,14.208c0.571,0.593,1.339,0.92,2.162,0.92 c0.779,0,1.518-0.297,2.079-0.837C56.255,54.982,56.293,53.08,55.146,51.887z M23.984,6c9.374,0,17,7.626,17,17s-7.626,17-17,17 s-17-7.626-17-17S14.61,6,23.984,6z"
        />
      </svg>
    </div>
    <p
      className="c5 c6"
      style={Object {}}
    >
      Where are you going?
    </p>
  </div>
</button>
`;
